{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 26,
  "lineage": "b9f5c764-dbb7-a53e-583c-01cce7ae0d7e",
  "resources": [
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_eip",
      "name": "wsc_eip_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060d06539acf8a6fb",
            "domain": "vpc",
            "id": "eipalloc-060d06539acf8a6fb",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-143-198-74.us-east-2.compute.amazonaws.com",
            "public_ip": "3.143.198.74",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_instance",
      "name": "wsc_ec2_vms_prv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-058d017bb0407da05",
            "arn": "arn:aws:ec2:us-east-2:149651745982:instance/i-030b2a372d06c9b71",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030b2a372d06c9b71",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0076ddbaea152035c",
            "private_dns": "ip-10-3-0-42.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.3.0.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0254dd2a6d4189587",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02025122cd5ad5ea7",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-068fa478e18794e9c"
            ]
          },
          "dependencies": [
            "module.vpc_dev.aws_subnet.wsc_prv_subnets",
            "module.vpc_dev.aws_subnet.wsc_pub_subnets",
            "module.vpc_dev.aws_vpc.wsc_vpc",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.vpc_dev.data.aws_availability_zones.us-east-2",
            "module.vpc_dev.data.aws_ssm_parameter.ami"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-058d017bb0407da05",
            "arn": "arn:aws:ec2:us-east-2:149651745982:instance/i-03269e24d300d7922",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03269e24d300d7922",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-059e41c06b9121f15",
            "private_dns": "ip-10-3-1-107.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.3.1.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06f7e1e769195a3bc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ea265d65c30d221",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-068fa478e18794e9c"
            ]
          },
          "dependencies": [
            "module.vpc_dev.aws_subnet.wsc_prv_subnets",
            "module.vpc_dev.aws_subnet.wsc_pub_subnets",
            "module.vpc_dev.aws_vpc.wsc_vpc",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.vpc_dev.data.aws_availability_zones.us-east-2",
            "module.vpc_dev.data.aws_ssm_parameter.ami"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-058d017bb0407da05",
            "arn": "arn:aws:ec2:us-east-2:149651745982:instance/i-0ef9293fbba723a0d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ef9293fbba723a0d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02e971cfc5cd800c1",
            "private_dns": "ip-10-3-2-16.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.3.2.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0983090a7a92277f3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-093320a5136c87c93",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-068fa478e18794e9c"
            ]
          },
          "dependencies": [
            "module.vpc_dev.aws_subnet.wsc_prv_subnets",
            "module.vpc_dev.aws_subnet.wsc_pub_subnets",
            "module.vpc_dev.aws_vpc.wsc_vpc",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.vpc_dev.data.aws_availability_zones.us-east-2",
            "module.vpc_dev.data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_instance",
      "name": "wsc_ec2_vms_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-058d017bb0407da05",
            "arn": "arn:aws:ec2:us-east-2:149651745982:instance/i-0f59a840edc7aad8b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f59a840edc7aad8b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-081b39436a4dfd2d2",
            "private_dns": "ip-10-2-0-73.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.73",
            "public_ip": "3.15.34.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0db430c001bf2cc85",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6c0d7ae6cf625bb",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-068fa478e18794e9c"
            ]
          },
          "dependencies": [
            "module.vpc_dev.aws_subnet.wsc_prv_subnets",
            "module.vpc_dev.aws_subnet.wsc_pub_subnets",
            "module.vpc_dev.aws_vpc.wsc_vpc",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.vpc_dev.data.aws_availability_zones.us-east-2",
            "module.vpc_dev.data.aws_ssm_parameter.ami"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-058d017bb0407da05",
            "arn": "arn:aws:ec2:us-east-2:149651745982:instance/i-0a555719982e01867",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a555719982e01867",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b9939f729c40df24",
            "private_dns": "ip-10-2-1-179.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.1.179",
            "public_ip": "3.144.216.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c44a87f7f4b37020",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b19c1fe5eb1503c7",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-068fa478e18794e9c"
            ]
          },
          "dependencies": [
            "module.vpc_dev.aws_subnet.wsc_prv_subnets",
            "module.vpc_dev.aws_subnet.wsc_pub_subnets",
            "module.vpc_dev.aws_vpc.wsc_vpc",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.vpc_dev.data.aws_availability_zones.us-east-2",
            "module.vpc_dev.data.aws_ssm_parameter.ami"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-058d017bb0407da05",
            "arn": "arn:aws:ec2:us-east-2:149651745982:instance/i-089a22699ff6023c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-089a22699ff6023c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bc2df626f2dccf0d",
            "private_dns": "ip-10-2-2-75.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.2.75",
            "public_ip": "18.221.87.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a8fb5c37eb6e0ef9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0adff09eb324bdb0a",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-068fa478e18794e9c"
            ]
          },
          "dependencies": [
            "module.vpc_dev.aws_subnet.wsc_prv_subnets",
            "module.vpc_dev.aws_subnet.wsc_pub_subnets",
            "module.vpc_dev.aws_vpc.wsc_vpc",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.vpc_dev.data.aws_availability_zones.us-east-2",
            "module.vpc_dev.data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wsc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:149651745982:internet-gateway/igw-07b4389c36c3d13bc",
            "id": "igw-07b4389c36c3d13bc",
            "owner_id": "149651745982",
            "vpc_id": "vpc-097a853d72a2046d8"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.wsc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "wsc_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060d06539acf8a6fb",
            "connectivity_type": "public",
            "id": "nat-0482ae59f797c0ee0",
            "network_interface_id": "eni-03a0c31c63a53158e",
            "private_ip": "10.3.0.162",
            "public_ip": "3.143.198.74",
            "subnet_id": "subnet-02025122cd5ad5ea7",
            "tags": {
              "Name": "wsc_ngw"
            },
            "tags_all": {
              "Name": "wsc_ngw"
            }
          },
          "dependencies": [
            "module.vpc_dev.aws_eip.wsc_eip_ngw",
            "module.vpc_dev.aws_internet_gateway.wsc_igw",
            "module.vpc_dev.aws_subnet.wsc_prv_subnets",
            "module.vpc_dev.aws_vpc.wsc_vpc",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.vpc_dev.data.aws_availability_zones.us-east-2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wsc_prv_sub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:149651745982:route-table/rtb-046601c7858b3ad75",
            "id": "rtb-046601c7858b3ad75",
            "owner_id": "149651745982",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0482ae59f797c0ee0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wsc_prv_sub_rt"
            },
            "tags_all": {
              "Name": "wsc_prv_sub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-097a853d72a2046d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_dev.aws_eip.wsc_eip_ngw",
            "module.vpc_dev.aws_internet_gateway.wsc_igw",
            "module.vpc_dev.aws_nat_gateway.wsc_ngw",
            "module.vpc_dev.aws_subnet.wsc_prv_subnets",
            "module.vpc_dev.aws_vpc.wsc_vpc",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.vpc_dev.data.aws_availability_zones.us-east-2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wsc_pub_sub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:149651745982:route-table/rtb-0b96cee9cddbde2b8",
            "id": "rtb-0b96cee9cddbde2b8",
            "owner_id": "149651745982",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b4389c36c3d13bc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wsc_pub_sub_rt"
            },
            "tags_all": {
              "Name": "wsc_pub_sub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-097a853d72a2046d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_dev.aws_internet_gateway.wsc_igw",
            "module.vpc_dev.aws_vpc.wsc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wsc_prv_sub_rt_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0983f7493a53a8df9",
            "route_table_id": "rtb-046601c7858b3ad75",
            "subnet_id": "subnet-02025122cd5ad5ea7"
          },
          "dependencies": [
            "module.vpc_dev.aws_eip.wsc_eip_ngw",
            "module.vpc_dev.aws_internet_gateway.wsc_igw",
            "module.vpc_dev.aws_nat_gateway.wsc_ngw",
            "module.vpc_dev.aws_route_table.wsc_prv_sub_rt",
            "module.vpc_dev.aws_subnet.wsc_prv_subnets",
            "module.vpc_dev.aws_vpc.wsc_vpc",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.vpc_dev.data.aws_availability_zones.us-east-2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdc6017a67209bc0",
            "route_table_id": "rtb-046601c7858b3ad75",
            "subnet_id": "subnet-06ea265d65c30d221"
          },
          "dependencies": [
            "module.vpc_dev.aws_eip.wsc_eip_ngw",
            "module.vpc_dev.aws_internet_gateway.wsc_igw",
            "module.vpc_dev.aws_nat_gateway.wsc_ngw",
            "module.vpc_dev.aws_route_table.wsc_prv_sub_rt",
            "module.vpc_dev.aws_subnet.wsc_prv_subnets",
            "module.vpc_dev.aws_vpc.wsc_vpc",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.vpc_dev.data.aws_availability_zones.us-east-2"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0006b13cbe56b0997",
            "route_table_id": "rtb-046601c7858b3ad75",
            "subnet_id": "subnet-093320a5136c87c93"
          },
          "dependencies": [
            "module.vpc_dev.aws_eip.wsc_eip_ngw",
            "module.vpc_dev.aws_internet_gateway.wsc_igw",
            "module.vpc_dev.aws_nat_gateway.wsc_ngw",
            "module.vpc_dev.aws_route_table.wsc_prv_sub_rt",
            "module.vpc_dev.aws_subnet.wsc_prv_subnets",
            "module.vpc_dev.aws_vpc.wsc_vpc",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.vpc_dev.data.aws_availability_zones.us-east-2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wsc_pub_sub_rt_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d1007f106a002ad",
            "route_table_id": "rtb-0b96cee9cddbde2b8",
            "subnet_id": "subnet-0b6c0d7ae6cf625bb"
          },
          "dependencies": [
            "module.vpc_dev.aws_internet_gateway.wsc_igw",
            "module.vpc_dev.aws_route_table.wsc_pub_sub_rt",
            "module.vpc_dev.aws_subnet.wsc_pub_subnets",
            "module.vpc_dev.aws_vpc.wsc_vpc",
            "module.vpc_dev.data.aws_availability_zones.us-east-2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6994a0b6f2e5be3",
            "route_table_id": "rtb-0b96cee9cddbde2b8",
            "subnet_id": "subnet-0b19c1fe5eb1503c7"
          },
          "dependencies": [
            "module.vpc_dev.aws_internet_gateway.wsc_igw",
            "module.vpc_dev.aws_route_table.wsc_pub_sub_rt",
            "module.vpc_dev.aws_subnet.wsc_pub_subnets",
            "module.vpc_dev.aws_vpc.wsc_vpc",
            "module.vpc_dev.data.aws_availability_zones.us-east-2"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0109b3008c707f3bc",
            "route_table_id": "rtb-0b96cee9cddbde2b8",
            "subnet_id": "subnet-0adff09eb324bdb0a"
          },
          "dependencies": [
            "module.vpc_dev.aws_internet_gateway.wsc_igw",
            "module.vpc_dev.aws_route_table.wsc_pub_sub_rt",
            "module.vpc_dev.aws_subnet.wsc_pub_subnets",
            "module.vpc_dev.aws_vpc.wsc_vpc",
            "module.vpc_dev.data.aws_availability_zones.us-east-2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wsc_prv_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:149651745982:subnet/subnet-02025122cd5ad5ea7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.3.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02025122cd5ad5ea7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149651745982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wsc_prv_sub_0",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "wsc_prv_sub_0",
              "Tier": "Private"
            },
            "vpc_id": "vpc-097a853d72a2046d8"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.wsc_vpc",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.vpc_dev.data.aws_availability_zones.us-east-2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:149651745982:subnet/subnet-06ea265d65c30d221",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.3.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ea265d65c30d221",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149651745982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wsc_prv_sub_1",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "wsc_prv_sub_1",
              "Tier": "Private"
            },
            "vpc_id": "vpc-097a853d72a2046d8"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.wsc_vpc",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.vpc_dev.data.aws_availability_zones.us-east-2"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:149651745982:subnet/subnet-093320a5136c87c93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.3.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093320a5136c87c93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149651745982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wsc_prv_sub_2",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "wsc_prv_sub_2",
              "Tier": "Private"
            },
            "vpc_id": "vpc-097a853d72a2046d8"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.wsc_vpc",
            "module.vpc_dev.aws_vpc_ipv4_cidr_block_association.secondary_cidr",
            "module.vpc_dev.data.aws_availability_zones.us-east-2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wsc_pub_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:149651745982:subnet/subnet-0b6c0d7ae6cf625bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6c0d7ae6cf625bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149651745982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wsc_pub_sub_0",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "wsc_pub_sub_0",
              "Tier": "Public"
            },
            "vpc_id": "vpc-097a853d72a2046d8"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.wsc_vpc",
            "module.vpc_dev.data.aws_availability_zones.us-east-2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:149651745982:subnet/subnet-0b19c1fe5eb1503c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b19c1fe5eb1503c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149651745982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wsc_pub_sub_1",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "wsc_pub_sub_1",
              "Tier": "Public"
            },
            "vpc_id": "vpc-097a853d72a2046d8"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.wsc_vpc",
            "module.vpc_dev.data.aws_availability_zones.us-east-2"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:149651745982:subnet/subnet-0adff09eb324bdb0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adff09eb324bdb0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149651745982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wsc_pub_sub_2",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "wsc_pub_sub_2",
              "Tier": "Public"
            },
            "vpc_id": "vpc-097a853d72a2046d8"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.wsc_vpc",
            "module.vpc_dev.data.aws_availability_zones.us-east-2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wsc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:149651745982:vpc/vpc-097a853d72a2046d8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-046d712de57bfc176",
            "default_route_table_id": "rtb-0a61be7c5c8b4a561",
            "default_security_group_id": "sg-068fa478e18794e9c",
            "dhcp_options_id": "dopt-2558724c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-097a853d72a2046d8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a61be7c5c8b4a561",
            "owner_id": "149651745982",
            "tags": {
              "Name": "wsc_vpc"
            },
            "tags_all": {
              "Name": "wsc_vpc"
            }
          }
        }
      ]
    }
  ]
}